--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "bbs-web-mobile",
   "private": true,
-  "version": "2023.7.3",
+  "version": "2023.9.25",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.21.0",
+    "@bytemd/plugin-frontmatter": "^1.21.0",
+    "@bytemd/plugin-gemoji": "^1.21.0",
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-math": "^1.21.0",
+    "@bytemd/plugin-medium-zoom": "^1.21.0",
+    "@bytemd/vue-next": "^1.21.0",
+    "@emoji-mart/data": "^1.1.2",
     "@types/crypto-js": "^4.1.1",
     "@types/lodash": "^4.14.186",
     "@types/prismjs": "^1.26.0",
@@ -16,12 +24,17 @@
     "cropperjs": "^1.5.12",
     "crypto-js": "^4.1.1",
     "dplayer": "^1.27.0",
+    "emoji-mart": "^5.5.2",
     "hls.js": "^1.2.5",
+    "juejin-markdown-themes": "^1.30.1",
     "lodash": "^4.17.21",
     "long": "^5.2.0",
+    "mermaid": "^10.4.0",
+    "micromark-util-symbol": "^2.0.0",
     "pinia": "^2.0.22",
     "prismjs": "^1.29.0",
     "sass": "^1.55.0",
+    "tua-body-scroll-lock": "^1.4.0",
     "vant": "^3.6.3",
     "vite-plugin-prismjs": "^0.0.8",
     "vue": "^3.2.25",
@@ -33,6 +46,7 @@
     "@vitejs/plugin-vue": "^2.3.4",
     "less": "^4.1.3",
     "postcss-px-to-viewport": "^1.1.1",
+    "stickybits": "^3.7.11",
     "typescript": "^4.5.4",
     "unplugin-vue-components": "^0.22.7",
     "vite": "^2.9.15",
